// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AnswerButtonsComponent rendering Should display an alert if there is a server error on BetsService.getBetsByUserId 1`] = `
<View>
  <Modal
    hardwareAccelerated={false}
    onRequestClose={[Function]}
    transparent={true}
    visible={false}
  >
    <View
      accessible={true}
      isTVSelectable={true}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "alignItems": "center",
          "backgroundColor": "#00000040",
          "flex": 1,
          "flexDirection": "column",
          "justifyContent": "center",
          "opacity": 1,
        }
      }
    >
      <View
        style={
          Object {
            "alignItems": "center",
            "backgroundColor": "#ffffff",
            "borderRadius": 5,
            "width": "70%",
          }
        }
      >
        <Text
          style={
            Object {
              "fontSize": 15,
              "fontWeight": "bold",
              "marginTop": 10,
              "textAlign": "center",
            }
          }
        >
          test
        </Text>
        <View
          style={
            Object {
              "borderBottomColor": "#000000",
              "borderBottomWidth": 1,
              "marginVertical": 10,
              "width": "50%",
            }
          }
        />
        <Text
          style={
            Object {
              "fontSize": 12,
              "fontWeight": "bold",
              "marginTop": 20,
              "textAlign": "center",
            }
          }
        >
          Vous avez choisi la réponse :
        </Text>
        <Text
          style={
            Object {
              "fontSize": 12,
              "fontWeight": "bold",
              "marginHorizontal": 10,
              "textAlign": "center",
            }
          }
        >
          
        </Text>
        <Text
          style={
            Object {
              "fontSize": 12,
              "fontWeight": "bold",
              "marginTop": 20,
              "textAlign": "center",
            }
          }
        >
          Veuillez entrer le montant de betCoins
que vous voulez placer sur cette réponse :
        </Text>
        <View
          style={
            Object {
              "alignItems": "center",
              "flexDirection": "row",
              "justifyContent": "center",
              "paddingLeft": 25,
            }
          }
        >
          <TextInput
            allowFontScaling={true}
            onChangeText={[Function]}
            style={
              Array [
                Object {
                  "alignItems": "center",
                  "borderColor": "#707070",
                  "borderRadius": 3,
                  "borderWidth": 0.5,
                  "height": 25,
                  "marginTop": 10,
                  "paddingHorizontal": 10,
                  "width": "55%",
                },
                Object {
                  "textAlign": "right",
                },
              ]
            }
            underlineColorAndroid="transparent"
            value="1"
          />
          <Image
            source={
              Object {
                "testUri": "../../../assets/images/betcoin_icon.png",
              }
            }
            style={
              Object {
                "height": 25,
                "marginLeft": 5,
                "marginTop": 10,
                "width": 25,
              }
            }
          />
        </View>
        <View
          style={
            Object {
              "flexDirection": "row",
              "marginTop": 15,
            }
          }
        >
          <View
            accessible={true}
            isTVSelectable={true}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "alignItems": "center",
                "backgroundColor": "#FC8D8D",
                "borderRadius": 5,
                "flex": 1,
                "height": 31,
                "justifyContent": "center",
                "margin": 2,
                "marginLeft": 1,
                "opacity": 1,
              }
            }
          >
            <Text
              style={
                Object {
                  "fontSize": 12,
                  "fontWeight": "bold",
                  "marginHorizontal": 10,
                  "textAlign": "center",
                }
              }
            >
              Annuler
            </Text>
          </View>
          <View
            accessible={true}
            isTVSelectable={true}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "alignItems": "center",
                "backgroundColor": "#A6E48D",
                "borderRadius": 5,
                "flex": 1,
                "height": 31,
                "justifyContent": "center",
                "margin": 2,
                "marginRight": 1,
                "opacity": 1,
              }
            }
          >
            <Text
              style={
                Object {
                  "fontSize": 12,
                  "fontWeight": "bold",
                  "marginHorizontal": 10,
                  "textAlign": "center",
                }
              }
            >
              Confirmer
            </Text>
          </View>
        </View>
      </View>
    </View>
  </Modal>
  <Text>
    An error occurred on this Bet. Sorry for the inconvenience
  </Text>
</View>
`;

exports[`AnswerButtonsComponent rendering Should render a "Connectez-vous pour parier" button 1`] = `
<View>
  <Modal
    hardwareAccelerated={false}
    onRequestClose={[Function]}
    transparent={true}
    visible={false}
  >
    <View
      accessible={true}
      isTVSelectable={true}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "alignItems": "center",
          "backgroundColor": "#00000040",
          "flex": 1,
          "flexDirection": "column",
          "justifyContent": "center",
          "opacity": 1,
        }
      }
    >
      <View
        style={
          Object {
            "alignItems": "center",
            "backgroundColor": "#ffffff",
            "borderRadius": 5,
            "width": "70%",
          }
        }
      >
        <Text
          style={
            Object {
              "fontSize": 15,
              "fontWeight": "bold",
              "marginTop": 10,
              "textAlign": "center",
            }
          }
        >
          test
        </Text>
        <View
          style={
            Object {
              "borderBottomColor": "#000000",
              "borderBottomWidth": 1,
              "marginVertical": 10,
              "width": "50%",
            }
          }
        />
        <Text
          style={
            Object {
              "fontSize": 12,
              "fontWeight": "bold",
              "marginTop": 20,
              "textAlign": "center",
            }
          }
        >
          Vous avez choisi la réponse :
        </Text>
        <Text
          style={
            Object {
              "fontSize": 12,
              "fontWeight": "bold",
              "marginHorizontal": 10,
              "textAlign": "center",
            }
          }
        >
          
        </Text>
        <Text
          style={
            Object {
              "fontSize": 12,
              "fontWeight": "bold",
              "marginTop": 20,
              "textAlign": "center",
            }
          }
        >
          Veuillez entrer le montant de betCoins
que vous voulez placer sur cette réponse :
        </Text>
        <View
          style={
            Object {
              "alignItems": "center",
              "flexDirection": "row",
              "justifyContent": "center",
              "paddingLeft": 25,
            }
          }
        >
          <TextInput
            allowFontScaling={true}
            onChangeText={[Function]}
            style={
              Array [
                Object {
                  "alignItems": "center",
                  "borderColor": "#707070",
                  "borderRadius": 3,
                  "borderWidth": 0.5,
                  "height": 25,
                  "marginTop": 10,
                  "paddingHorizontal": 10,
                  "width": "55%",
                },
                Object {
                  "textAlign": "right",
                },
              ]
            }
            underlineColorAndroid="transparent"
            value="1"
          />
          <Image
            source={
              Object {
                "testUri": "../../../assets/images/betcoin_icon.png",
              }
            }
            style={
              Object {
                "height": 25,
                "marginLeft": 5,
                "marginTop": 10,
                "width": 25,
              }
            }
          />
        </View>
        <View
          style={
            Object {
              "flexDirection": "row",
              "marginTop": 15,
            }
          }
        >
          <View
            accessible={true}
            isTVSelectable={true}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "alignItems": "center",
                "backgroundColor": "#FC8D8D",
                "borderRadius": 5,
                "flex": 1,
                "height": 31,
                "justifyContent": "center",
                "margin": 2,
                "marginLeft": 1,
                "opacity": 1,
              }
            }
          >
            <Text
              style={
                Object {
                  "fontSize": 12,
                  "fontWeight": "bold",
                  "marginHorizontal": 10,
                  "textAlign": "center",
                }
              }
            >
              Annuler
            </Text>
          </View>
          <View
            accessible={true}
            isTVSelectable={true}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "alignItems": "center",
                "backgroundColor": "#A6E48D",
                "borderRadius": 5,
                "flex": 1,
                "height": 31,
                "justifyContent": "center",
                "margin": 2,
                "marginRight": 1,
                "opacity": 1,
              }
            }
          >
            <Text
              style={
                Object {
                  "fontSize": 12,
                  "fontWeight": "bold",
                  "marginHorizontal": 10,
                  "textAlign": "center",
                }
              }
            >
              Confirmer
            </Text>
          </View>
        </View>
      </View>
    </View>
  </Modal>
  <View
    accessible={true}
    isTVSelectable={true}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "alignSelf": "center",
        "backgroundColor": "#FFFFFF",
        "borderRadius": 10,
        "height": 45,
        "justifyContent": "center",
        "marginTop": 20,
        "opacity": 1,
        "shadowColor": "#000000",
        "shadowOffset": Object {
          "height": 6,
          "width": 0,
        },
        "shadowOpacity": 0.33,
        "shadowRadius": 7.5,
        "width": 215,
      }
    }
  >
    <Text
      style={
        Object {
          "color": "#000000",
          "fontFamily": "System",
          "fontSize": 15,
          "textAlign": "center",
        }
      }
    >
      Connectez-vous pour parier
    </Text>
  </View>
</View>
`;

exports[`AnswerButtonsComponent rendering Should render a description showing the user's answer 1`] = `
<View>
  <Modal
    hardwareAccelerated={false}
    onRequestClose={[Function]}
    transparent={true}
    visible={false}
  >
    <View
      accessible={true}
      isTVSelectable={true}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "alignItems": "center",
          "backgroundColor": "#00000040",
          "flex": 1,
          "flexDirection": "column",
          "justifyContent": "center",
          "opacity": 1,
        }
      }
    >
      <View
        style={
          Object {
            "alignItems": "center",
            "backgroundColor": "#ffffff",
            "borderRadius": 5,
            "width": "70%",
          }
        }
      >
        <Text
          style={
            Object {
              "fontSize": 15,
              "fontWeight": "bold",
              "marginTop": 10,
              "textAlign": "center",
            }
          }
        >
          test
        </Text>
        <View
          style={
            Object {
              "borderBottomColor": "#000000",
              "borderBottomWidth": 1,
              "marginVertical": 10,
              "width": "50%",
            }
          }
        />
        <Text
          style={
            Object {
              "fontSize": 12,
              "fontWeight": "bold",
              "marginTop": 20,
              "textAlign": "center",
            }
          }
        >
          Vous avez choisi la réponse :
        </Text>
        <Text
          style={
            Object {
              "fontSize": 12,
              "fontWeight": "bold",
              "marginHorizontal": 10,
              "textAlign": "center",
            }
          }
        >
          
        </Text>
        <Text
          style={
            Object {
              "fontSize": 12,
              "fontWeight": "bold",
              "marginTop": 20,
              "textAlign": "center",
            }
          }
        >
          Veuillez entrer le montant de betCoins
que vous voulez placer sur cette réponse :
        </Text>
        <View
          style={
            Object {
              "alignItems": "center",
              "flexDirection": "row",
              "justifyContent": "center",
              "paddingLeft": 25,
            }
          }
        >
          <TextInput
            allowFontScaling={true}
            onChangeText={[Function]}
            style={
              Array [
                Object {
                  "alignItems": "center",
                  "borderColor": "#707070",
                  "borderRadius": 3,
                  "borderWidth": 0.5,
                  "height": 25,
                  "marginTop": 10,
                  "paddingHorizontal": 10,
                  "width": "55%",
                },
                Object {
                  "textAlign": "right",
                },
              ]
            }
            underlineColorAndroid="transparent"
            value="1"
          />
          <Image
            source={
              Object {
                "testUri": "../../../assets/images/betcoin_icon.png",
              }
            }
            style={
              Object {
                "height": 25,
                "marginLeft": 5,
                "marginTop": 10,
                "width": 25,
              }
            }
          />
        </View>
        <View
          style={
            Object {
              "flexDirection": "row",
              "marginTop": 15,
            }
          }
        >
          <View
            accessible={true}
            isTVSelectable={true}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "alignItems": "center",
                "backgroundColor": "#FC8D8D",
                "borderRadius": 5,
                "flex": 1,
                "height": 31,
                "justifyContent": "center",
                "margin": 2,
                "marginLeft": 1,
                "opacity": 1,
              }
            }
          >
            <Text
              style={
                Object {
                  "fontSize": 12,
                  "fontWeight": "bold",
                  "marginHorizontal": 10,
                  "textAlign": "center",
                }
              }
            >
              Annuler
            </Text>
          </View>
          <View
            accessible={true}
            isTVSelectable={true}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "alignItems": "center",
                "backgroundColor": "#A6E48D",
                "borderRadius": 5,
                "flex": 1,
                "height": 31,
                "justifyContent": "center",
                "margin": 2,
                "marginRight": 1,
                "opacity": 1,
              }
            }
          >
            <Text
              style={
                Object {
                  "fontSize": 12,
                  "fontWeight": "bold",
                  "marginHorizontal": 10,
                  "textAlign": "center",
                }
              }
            >
              Confirmer
            </Text>
          </View>
        </View>
      </View>
    </View>
  </Modal>
  <View
    style={
      Object {
        "flex": 1,
        "flexDirection": "column",
        "justifyContent": "flex-start",
        "marginHorizontal": 20,
        "marginVertical": 5,
      }
    }
  >
    <View
      accessible={true}
      isTVSelectable={true}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "backgroundColor": "#C9ECE9",
          "borderRadius": 5,
          "height": 50,
          "opacity": 1,
        }
      }
    >
      <View
        style={
          Object {
            "alignItems": "center",
            "flex": 1,
            "justifyContent": "center",
          }
        }
      >
        <Text />
      </View>
    </View>
  </View>
  <View
    style={
      Object {
        "flex": 1,
        "flexDirection": "column",
        "justifyContent": "flex-start",
        "marginHorizontal": 20,
        "marginVertical": 5,
      }
    }
  >
    <View
      accessible={true}
      isTVSelectable={true}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "backgroundColor": "#C9ECE9",
          "borderRadius": 5,
          "height": 50,
          "opacity": 1,
        }
      }
    >
      <View
        style={
          Object {
            "alignItems": "center",
            "flex": 1,
            "justifyContent": "center",
          }
        }
      >
        <Text />
      </View>
    </View>
  </View>
</View>
`;

exports[`AnswerButtonsComponent rendering Should render a description telling the user they have no coin 1`] = `
<View>
  <Modal
    hardwareAccelerated={false}
    onRequestClose={[Function]}
    transparent={true}
    visible={false}
  >
    <View
      accessible={true}
      isTVSelectable={true}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "alignItems": "center",
          "backgroundColor": "#00000040",
          "flex": 1,
          "flexDirection": "column",
          "justifyContent": "center",
          "opacity": 1,
        }
      }
    >
      <View
        style={
          Object {
            "alignItems": "center",
            "backgroundColor": "#ffffff",
            "borderRadius": 5,
            "width": "70%",
          }
        }
      >
        <Text
          style={
            Object {
              "fontSize": 15,
              "fontWeight": "bold",
              "marginTop": 10,
              "textAlign": "center",
            }
          }
        >
          test
        </Text>
        <View
          style={
            Object {
              "borderBottomColor": "#000000",
              "borderBottomWidth": 1,
              "marginVertical": 10,
              "width": "50%",
            }
          }
        />
        <Text
          style={
            Object {
              "fontSize": 12,
              "fontWeight": "bold",
              "marginTop": 20,
              "textAlign": "center",
            }
          }
        >
          Vous avez choisi la réponse :
        </Text>
        <Text
          style={
            Object {
              "fontSize": 12,
              "fontWeight": "bold",
              "marginHorizontal": 10,
              "textAlign": "center",
            }
          }
        >
          
        </Text>
        <Text
          style={
            Object {
              "fontSize": 12,
              "fontWeight": "bold",
              "marginTop": 20,
              "textAlign": "center",
            }
          }
        >
          Veuillez entrer le montant de betCoins
que vous voulez placer sur cette réponse :
        </Text>
        <View
          style={
            Object {
              "alignItems": "center",
              "flexDirection": "row",
              "justifyContent": "center",
              "paddingLeft": 25,
            }
          }
        >
          <TextInput
            allowFontScaling={true}
            onChangeText={[Function]}
            style={
              Array [
                Object {
                  "alignItems": "center",
                  "borderColor": "#707070",
                  "borderRadius": 3,
                  "borderWidth": 0.5,
                  "height": 25,
                  "marginTop": 10,
                  "paddingHorizontal": 10,
                  "width": "55%",
                },
                Object {
                  "textAlign": "right",
                },
              ]
            }
            underlineColorAndroid="transparent"
            value="1"
          />
          <Image
            source={
              Object {
                "testUri": "../../../assets/images/betcoin_icon.png",
              }
            }
            style={
              Object {
                "height": 25,
                "marginLeft": 5,
                "marginTop": 10,
                "width": 25,
              }
            }
          />
        </View>
        <View
          style={
            Object {
              "flexDirection": "row",
              "marginTop": 15,
            }
          }
        >
          <View
            accessible={true}
            isTVSelectable={true}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "alignItems": "center",
                "backgroundColor": "#FC8D8D",
                "borderRadius": 5,
                "flex": 1,
                "height": 31,
                "justifyContent": "center",
                "margin": 2,
                "marginLeft": 1,
                "opacity": 1,
              }
            }
          >
            <Text
              style={
                Object {
                  "fontSize": 12,
                  "fontWeight": "bold",
                  "marginHorizontal": 10,
                  "textAlign": "center",
                }
              }
            >
              Annuler
            </Text>
          </View>
          <View
            accessible={true}
            isTVSelectable={true}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "alignItems": "center",
                "backgroundColor": "#A6E48D",
                "borderRadius": 5,
                "flex": 1,
                "height": 31,
                "justifyContent": "center",
                "margin": 2,
                "marginRight": 1,
                "opacity": 1,
              }
            }
          >
            <Text
              style={
                Object {
                  "fontSize": 12,
                  "fontWeight": "bold",
                  "marginHorizontal": 10,
                  "textAlign": "center",
                }
              }
            >
              Confirmer
            </Text>
          </View>
        </View>
      </View>
    </View>
  </Modal>
  <Text
    style={
      Array [
        Object {
          "flex": 1,
          "fontFamily": "System",
          "fontSize": 15,
          "marginHorizontal": 20,
        },
        Object {
          "color": "#FE3939",
        },
      ]
    }
  >
    Vous ne possédez plus suffisamment de betcoin pour pouvoir parier.
  </Text>
</View>
`;

exports[`AnswerButtonsComponent rendering Should render an error if there is no more than 1 answer to the bet 1`] = `
<View>
  <Modal
    hardwareAccelerated={false}
    onRequestClose={[Function]}
    transparent={true}
    visible={false}
  >
    <View
      accessible={true}
      isTVSelectable={true}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "alignItems": "center",
          "backgroundColor": "#00000040",
          "flex": 1,
          "flexDirection": "column",
          "justifyContent": "center",
          "opacity": 1,
        }
      }
    >
      <View
        style={
          Object {
            "alignItems": "center",
            "backgroundColor": "#ffffff",
            "borderRadius": 5,
            "width": "70%",
          }
        }
      >
        <Text
          style={
            Object {
              "fontSize": 15,
              "fontWeight": "bold",
              "marginTop": 10,
              "textAlign": "center",
            }
          }
        >
          test
        </Text>
        <View
          style={
            Object {
              "borderBottomColor": "#000000",
              "borderBottomWidth": 1,
              "marginVertical": 10,
              "width": "50%",
            }
          }
        />
        <Text
          style={
            Object {
              "fontSize": 12,
              "fontWeight": "bold",
              "marginTop": 20,
              "textAlign": "center",
            }
          }
        >
          Vous avez choisi la réponse :
        </Text>
        <Text
          style={
            Object {
              "fontSize": 12,
              "fontWeight": "bold",
              "marginHorizontal": 10,
              "textAlign": "center",
            }
          }
        >
          
        </Text>
        <Text
          style={
            Object {
              "fontSize": 12,
              "fontWeight": "bold",
              "marginTop": 20,
              "textAlign": "center",
            }
          }
        >
          Veuillez entrer le montant de betCoins
que vous voulez placer sur cette réponse :
        </Text>
        <View
          style={
            Object {
              "alignItems": "center",
              "flexDirection": "row",
              "justifyContent": "center",
              "paddingLeft": 25,
            }
          }
        >
          <TextInput
            allowFontScaling={true}
            onChangeText={[Function]}
            style={
              Array [
                Object {
                  "alignItems": "center",
                  "borderColor": "#707070",
                  "borderRadius": 3,
                  "borderWidth": 0.5,
                  "height": 25,
                  "marginTop": 10,
                  "paddingHorizontal": 10,
                  "width": "55%",
                },
                Object {
                  "textAlign": "right",
                },
              ]
            }
            underlineColorAndroid="transparent"
            value="1"
          />
          <Image
            source={
              Object {
                "testUri": "../../../assets/images/betcoin_icon.png",
              }
            }
            style={
              Object {
                "height": 25,
                "marginLeft": 5,
                "marginTop": 10,
                "width": 25,
              }
            }
          />
        </View>
        <View
          style={
            Object {
              "flexDirection": "row",
              "marginTop": 15,
            }
          }
        >
          <View
            accessible={true}
            isTVSelectable={true}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "alignItems": "center",
                "backgroundColor": "#FC8D8D",
                "borderRadius": 5,
                "flex": 1,
                "height": 31,
                "justifyContent": "center",
                "margin": 2,
                "marginLeft": 1,
                "opacity": 1,
              }
            }
          >
            <Text
              style={
                Object {
                  "fontSize": 12,
                  "fontWeight": "bold",
                  "marginHorizontal": 10,
                  "textAlign": "center",
                }
              }
            >
              Annuler
            </Text>
          </View>
          <View
            accessible={true}
            isTVSelectable={true}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "alignItems": "center",
                "backgroundColor": "#A6E48D",
                "borderRadius": 5,
                "flex": 1,
                "height": 31,
                "justifyContent": "center",
                "margin": 2,
                "marginRight": 1,
                "opacity": 1,
              }
            }
          >
            <Text
              style={
                Object {
                  "fontSize": 12,
                  "fontWeight": "bold",
                  "marginHorizontal": 10,
                  "textAlign": "center",
                }
              }
            >
              Confirmer
            </Text>
          </View>
        </View>
      </View>
    </View>
  </Modal>
  <Text>
    An error occurred on this Bet. Sorry for the inconvenience
  </Text>
</View>
`;

exports[`AnswerButtonsComponent rendering Should render some non answered buttons 1`] = `
<View>
  <Modal
    hardwareAccelerated={false}
    onRequestClose={[Function]}
    transparent={true}
    visible={false}
  >
    <View
      accessible={true}
      isTVSelectable={true}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "alignItems": "center",
          "backgroundColor": "#00000040",
          "flex": 1,
          "flexDirection": "column",
          "justifyContent": "center",
          "opacity": 1,
        }
      }
    >
      <View
        style={
          Object {
            "alignItems": "center",
            "backgroundColor": "#ffffff",
            "borderRadius": 5,
            "width": "70%",
          }
        }
      >
        <Text
          style={
            Object {
              "fontSize": 15,
              "fontWeight": "bold",
              "marginTop": 10,
              "textAlign": "center",
            }
          }
        >
          test
        </Text>
        <View
          style={
            Object {
              "borderBottomColor": "#000000",
              "borderBottomWidth": 1,
              "marginVertical": 10,
              "width": "50%",
            }
          }
        />
        <Text
          style={
            Object {
              "fontSize": 12,
              "fontWeight": "bold",
              "marginTop": 20,
              "textAlign": "center",
            }
          }
        >
          Vous avez choisi la réponse :
        </Text>
        <Text
          style={
            Object {
              "fontSize": 12,
              "fontWeight": "bold",
              "marginHorizontal": 10,
              "textAlign": "center",
            }
          }
        >
          
        </Text>
        <Text
          style={
            Object {
              "fontSize": 12,
              "fontWeight": "bold",
              "marginTop": 20,
              "textAlign": "center",
            }
          }
        >
          Veuillez entrer le montant de betCoins
que vous voulez placer sur cette réponse :
        </Text>
        <View
          style={
            Object {
              "alignItems": "center",
              "flexDirection": "row",
              "justifyContent": "center",
              "paddingLeft": 25,
            }
          }
        >
          <TextInput
            allowFontScaling={true}
            onChangeText={[Function]}
            style={
              Array [
                Object {
                  "alignItems": "center",
                  "borderColor": "#707070",
                  "borderRadius": 3,
                  "borderWidth": 0.5,
                  "height": 25,
                  "marginTop": 10,
                  "paddingHorizontal": 10,
                  "width": "55%",
                },
                Object {
                  "textAlign": "right",
                },
              ]
            }
            underlineColorAndroid="transparent"
            value="1"
          />
          <Image
            source={
              Object {
                "testUri": "../../../assets/images/betcoin_icon.png",
              }
            }
            style={
              Object {
                "height": 25,
                "marginLeft": 5,
                "marginTop": 10,
                "width": 25,
              }
            }
          />
        </View>
        <View
          style={
            Object {
              "flexDirection": "row",
              "marginTop": 15,
            }
          }
        >
          <View
            accessible={true}
            isTVSelectable={true}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "alignItems": "center",
                "backgroundColor": "#FC8D8D",
                "borderRadius": 5,
                "flex": 1,
                "height": 31,
                "justifyContent": "center",
                "margin": 2,
                "marginLeft": 1,
                "opacity": 1,
              }
            }
          >
            <Text
              style={
                Object {
                  "fontSize": 12,
                  "fontWeight": "bold",
                  "marginHorizontal": 10,
                  "textAlign": "center",
                }
              }
            >
              Annuler
            </Text>
          </View>
          <View
            accessible={true}
            isTVSelectable={true}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "alignItems": "center",
                "backgroundColor": "#A6E48D",
                "borderRadius": 5,
                "flex": 1,
                "height": 31,
                "justifyContent": "center",
                "margin": 2,
                "marginRight": 1,
                "opacity": 1,
              }
            }
          >
            <Text
              style={
                Object {
                  "fontSize": 12,
                  "fontWeight": "bold",
                  "marginHorizontal": 10,
                  "textAlign": "center",
                }
              }
            >
              Confirmer
            </Text>
          </View>
        </View>
      </View>
    </View>
  </Modal>
  <View
    style={
      Object {
        "flex": 1,
        "flexDirection": "column",
        "justifyContent": "flex-start",
        "marginHorizontal": 20,
        "marginVertical": 5,
      }
    }
  >
    <View
      accessible={true}
      isTVSelectable={true}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "backgroundColor": "#C9ECE9",
          "borderRadius": 5,
          "height": 50,
          "opacity": 1,
        }
      }
    >
      <View
        style={
          Object {
            "alignItems": "center",
            "flex": 1,
            "justifyContent": "center",
          }
        }
      >
        <Text />
      </View>
    </View>
  </View>
  <View
    style={
      Object {
        "flex": 1,
        "flexDirection": "column",
        "justifyContent": "flex-start",
        "marginHorizontal": 20,
        "marginVertical": 5,
      }
    }
  >
    <View
      accessible={true}
      isTVSelectable={true}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "backgroundColor": "#C9ECE9",
          "borderRadius": 5,
          "height": 50,
          "opacity": 1,
        }
      }
    >
      <View
        style={
          Object {
            "alignItems": "center",
            "flex": 1,
            "justifyContent": "center",
          }
        }
      >
        <Text />
      </View>
    </View>
  </View>
</View>
`;
